axxx : tomcat 7 vm packaging still TODO : * deploy on VM and test * conflict org.eclipse.runtime.api * unify conf of localhost (for tuscany:binding.http) vs vmregistry in easysoa-proxy